Add Healthcheck endpoint to Smithy spec
